This file documents the revision history for Perl extension Mojolicious.

2.67  2012-03-24
  - Added start_app method to Mojo::Command.
  - Improved documentation.
  - Improved tests.

2.66  2012-03-23
  - Reformatted "Changes".
  - Improved Mojo::Reactor::Poll performance.
  - Improved tests.
  - Fixed one_tick semantics to be equal in Mojo::Reactor::Poll and
    Mojo::Reactor::EV.

2.65  2012-03-22
  - Deprecated Mojo::IOLoop->drop in favor of Mojo::IOLoop->remove.
  - Renamed Mojo::Reactor->drop to Mojo::Reactor->remove.
  - Added Mojo::Reactor::Poll.
  - Added one_tick method to Mojo::Reactor and Mojo::Reactor::EV.
  - Removed experimental status from Mojo::IOLoop::Client.
  - Removed experimental status from Mojo::IOLoop::Server.
  - Removed experimental status from Mojo::IOLoop::Stream.
  - Removed experimental status from Mojo::Reactor.
  - Removed experimental status from Mojo::Reactor::EV.
  - Removed experimental status from client_class, max_accepts, reactor,
    server_class and stream_class attributes in Mojo::IOLoop.
  - Removed experimental status from client server and stream methods in
    Mojo::IOLoop.
  - Updated jQuery to version 1.7.2.
  - Improved documentation.
  - Improved tests.

2.64  2012-03-21
  - Deprecated Mojolicious::Routes->controller_base_class in favor of
    Mojolicious::Routes->base_classes.
  - Removed handle argument from io watchers in Mojo::Reactor.
  - Improved documentation.

2.63  2012-03-20
  - Renamed Mojo::IOWatcher to Mojo::Reactor.
  - Added Mojolicious::Routes::Route.
  - Added find and root methods to Mojolicious::Routes::Route.
  - Improved form_for helper to automatically add method="POST" attributes
    when necessary.
  - Improved memory usage of Mojolicious::Routes.
  - Improved Mojolicious::Renderer performance.
  - Improved documentation.
  - Improved tests.
  - Fixed bug that slowed down Mojolicious::Renderer.
  - Fixed small newline capture bug in Mojolicious::Routes::Match.

2.62  2012-03-17