@@ -8,27 +8,12 @@ use File::Spec::Functions qw/catdir catfile splitdir/;
 use IO::File;
 use Mojo::Server;
 use Mojo::Template;
-use Mojo::Loader;
 use Mojo::Util qw/b64_decode decamelize/;
 
 has app => sub { Mojo::Server->new->app };
-has hint => <<"EOF";
-
-See '$0 help COMMAND' for more information on a specific command.
-EOF
 has description => 'No description.';
-has message     => <<"EOF";
-usage: $0 COMMAND [OPTIONS]
-
-Tip: CGI and PSGI environments can be automatically detected very often and
-     work without commands.
-
-These commands are currently available:
-EOF
-has namespaces => sub { ['Mojo::Command'] };
-has quiet      => 0;
-has renderer   => sub { Mojo::Template->new };
-has usage      => "usage: $0\n";
+has quiet       => 0;
+has usage       => "usage: $0\n";
 
 # Cache
 my $CACHE = {};
@@ -77,20 +62,6 @@ sub create_rel_dir {
 
 # "Olive oil? Asparagus? If your mother wasn't so fancy,
 #  we could just shop at the gas station like normal people."
-sub detect {
-  my ($self, $guess) = @_;
-
-  # PSGI (Plack only for now)
-  return 'psgi' if defined $ENV{PLACK_ENV};
-
-  # CGI
-  return 'cgi'
-    if defined $ENV{PATH_INFO} || defined $ENV{GATEWAY_INTERFACE};
-
-  # Nothing
-  return $guess;
-}
-
 sub get_all_data {
   my ($self, $class) = @_;
   $class ||= ref $self;
@@ -140,15 +111,11 @@ sub rel_dir { catdir(getcwd(), split /\//, pop) }
 
 sub rel_file { catfile(getcwd(), split /\//, pop) }
 
-sub render_data {
-  my $self = shift;
-  $self->renderer->render($self->get_data(shift), @_);
-}
+sub render_data { Mojo::Template->new->render(shift->get_data(shift), @_) }
 
 sub render_to_file {
   my ($self, $data, $path) = (shift, shift, shift);
-  $self->write_file($path, $self->render_data($data, @_));
-  return $self;
+  return $self->write_file($path, $self->render_data($data, @_));
 }
 
 sub render_to_rel_file {
@@ -156,89 +123,10 @@ sub render_to_rel_file {
   $self->render_to_file(shift, $self->rel_dir(shift), @_);
 }
 
+sub run { croak 'Method "run" not implemented by subclass' }
+
 # "The only thing I asked you to do for this party was put on clothes,
 #  and you didn't do it."
-sub run {
-  my ($self, $name, @args) = @_;
-
-  # Application loader
-  return $self->app if defined $ENV{MOJO_APP_LOADER};
-
-  # Try to detect environment
-  $name = $self->detect($name) unless $ENV{MOJO_NO_DETECT};
-
-  # Run command
-  if ($name && $name =~ /^\w+$/ && ($name ne 'help' || $args[0])) {
-
-    # Help
-    my $help = $name eq 'help';
-    $name = shift @args if $help;
-    $help = 1           if $ENV{MOJO_HELP};
-
-    # Try all namespaces
-    my $module;
-    $module = _command("${_}::$name") and last for @{$self->namespaces};
-
-    # Command missing
-    die qq/Command "$name" missing, maybe you need to install it?\n/
-      unless $module;
-
-    # Run
-    return $help ? $module->new->help : $module->new->run(@args);
-  }
-
-  # Test
-  return 1 if $ENV{HARNESS_ACTIVE};
-
-  # Try all namespaces
-  my $commands = [];
-  my $seen     = {};
-  for my $namespace (@{$self->namespaces}) {
-    for my $module (@{Mojo::Loader->search($namespace)}) {
-      next unless my $command = _command($module);
-      $command =~ s/^$namespace\:\://;
-      push @$commands, [$command => $module] unless $seen->{$command}++;
-    }
-  }
-
-  # Print overview
-  print $self->message;
-
-  # Make list
-  my $list = [];
-  my $max  = 0;
-  foreach my $command (@$commands) {
-    my $len = length $command->[0];
-    $max = $len if $len > $max;
-    push @$list, [$command->[0], $command->[1]->new->description];
-  }
-
-  # Print list
-  foreach my $command (@$list) {
-    my ($name, $description) = @$command;
-    print "  $name" . (' ' x ($max - length $name)) . "   $description";
-  }
-  print $self->hint;
-  return 1;
-}
-
-sub start {
-  my $self = shift;
-
-  # Executable
-  $ENV{MOJO_EXE} ||= (caller)[1] if $ENV{MOJO_APP};
-
-  # Run
-  my @args = @_ ? @_ : @ARGV;
-  ref $self ? $self->run(@args) : $self->new->run(@args);
-}
-
-sub start_app {
-  my $self = shift;
-  $ENV{MOJO_APP} = shift;
-  $self->start(@_);
-}
-
 sub write_file {
   my ($self, $path, $data) = @_;
 
@@ -261,15 +149,6 @@ sub write_file {
 sub write_rel_file {
   my ($self, $path, $data) = @_;
   $self->write_file($self->rel_file($path), $data);
-}
-
-sub _command {
-  my $module = shift;
-  if (my $e = Mojo::Loader->load($module)) {
-    return unless ref $e;
-    die $e;
-  }
-  return $module->isa('Mojo::Command') ? $module : undef;
 }
 
 1;
@@ -337,27 +216,6 @@ Currently active application, defaults to a L<Mojo::HelloWorld> object.
 
 Short description of command, used for the command list.
 
-=head2 C<hint>
-
-  my $hint  = $commands->hint;
-  $commands = $commands->hint('Foo!');
-
-Short hint shown after listing available commands.
-
-=head2 C<message>
-
-  my $message = $commands->message;
-  $commands   = $commands->message('Hello World!');
-
-Short usage message shown before listing available commands.
-
-=head2 C<namespaces>
-
-  my $namespaces = $commands->namespaces;
-  $commands      = $commands->namespaces(['Mojolicious::Commands']);
-
-Namespaces to search for available commands, defaults to L<Mojo::Command>.
-
 =head2 C<quiet>
 
   my $quiet = $command->quiet;
@@ -420,13 +278,6 @@ Portably create a directory.
 
 Portably create a relative directory.
 
-=head2 C<detect>
-
-  my $env = $commands->detect;
-  my $env = $commands->detect($guess);
-
-Try to detect environment.
-
 =head2 C<get_all_data>
 
   my $all = $command->get_all_data;
@@ -480,25 +331,10 @@ relative file.
 
 =head2 C<run>
 
-  $commands->run;
-  $commands->run(@ARGV);
+  $command->run;
+  $command->run(@ARGV);
 
-Load and run commands. Automatic deployment environment detection can be
-disabled with the C<MOJO_NO_DETECT> environment variable.
-
-=head2 C<start>
-
-  Mojo::Command->start;
-  Mojo::Command->start(@ARGV);
-
-Start the command line interface.
-
-=head2 C<start_app>
-
-  Mojo::Command->start_app('MyApp');
-  Mojo::Command->start_app(MyApp => @ARGV);
-
-Start the command line interface for application.
+Run command.
 
 =head2 C<write_file>
 
